# safers-dashboard-test

./: .gitignore  Dockerfile  README.md  docker-compose.yml  run-django.sh  startup.sh
client/: pyproject.toml
client/__pypackages__/: .gitignore
client/auth/: apps.py  urls.py  views.py
client/config/: asgi.py  settings.py  urls.py  wsgi.py
client/templates/: index.html
server/: pyproject.toml  pytest.ini
server/config/: asgi.py  urls.py  wsgi.py
server/config/settings/: __init__.py  base.py  development.py
server/safers/auth/: admin.py  apps.py  authentication.py  models.py  schema.py  serializers.py  signals.py  urls.py  utils.py  views.py
server/safers/auth/migrations/: 0001_initial.py
server/safers/auth/serializers/: serializers_tokens.py  serializers_views.py
server/safers/core/: apps.py  authentication.py  clients.py  decorators.py  logging.py  managers.py  mixins.py  storage.py  urls.py  widgets.py
server/safers/core/admin/: __init__.py  admin_base.py  admin_settings.py  admin_sites.py  admin_utils.py
server/safers/core/fixtures/: countries_fixture.json
server/safers/core/migrations/: 0001_initial.py  0002_siteprofile.py  0003_siteprofile_data.py  0004_country.py  0005_saferssettings_allow_logout_via_get.py
server/safers/core/models/: __init__.py  models_countries.py  models_settings.py  models_sites.py
server/safers/core/serializers/: __init__.py  serializers_settings.py  serializers_utils.py
server/safers/core/templatetags/: tags_sites.py
server/safers/core/tests/: test_managers.py
server/safers/core/utils/: __init__.py  utils_backups.py  utils_settings.py
server/safers/core/views/: __init__.py  (+1 more)
server/safers/users/: apps.py  permissions.py  signals.py  urls.py  utils.py
(+30 files in other folders)
